Added button 'game over'

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <div class="esq esq1"></div>
@@ -13,8 +15,20 @@
         <div class="esq esq3"></div>
         <div class="esq esq4"></div>
         <div class="start">Empezar</div>
+        <div class="roundContainer">
+            <div class="roundsNumber">1</div>
+            <p class="roundText">Rondas</p>
+        </div>
     </div>
-    
+    <div class="gameOverContainer">
+        <p class="msgGameOver">Perdiste:</p>
+        <button class="btnTryAgain">Volver a Empezar</button>
+    </div>
+
     <script src="Ejercicio.js"></script>
+
+    <!-- <span class="tooltip" suu="el bicho" data-tooltip="Hola mundo">Pasa el mouse</span> -->
+
 </body>
+
 </html>
