--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <p class="msgGameOver">Perdiste:</p>
         <button class="btnTryAgain">Volver a Empezar</button>
     </div>
+    <audio src=""></audio>
 
     <script src="Ejercicio.js"></script>
 
